--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="main-body">
       <form
         class="content"
-        action="https://submit-form.com/4iMjBLS0C"
+        action="https://usebasin.com/f/9016ad482707"
         method="POST"
       >
         <div>
